--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   },
   "engines": {
     "node": "9.8.0"
-    } ,
+  },
   "keywords": [
     "Chat"
   ],
   "author": "Anil Menon",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "socket.io": "^1.4.8"
   }
 }
